--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -90,6 +90,7 @@
       width: 250px;
       height: 250px;
       background: url("/img/portrait.jpg");
+      background-size: cover;
       border-radius: 50%;
       border: 3px solid $secondary-color;
     }
