--- a/scss/main.scss
+++ b/scss/main.scss
@@ -81,6 +81,8 @@ main {
 
   .bio-image {
     grid-area: bioimage;
+    width: 65%;
+    height: 100%;
     margin: auto;
     border-radius: 50%;
     border: 3px solid $secondary-color;
