--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@
 .menu-branding .portrait {
   width: 250px;
   height: 250px;
-  background: url("/img/portrait.jpg");
+  background: url("../img/portrait.jpg");
   background-size: cover;
   border-radius: 50%;
   border: 3px solid #eece1a;
@@ -172,7 +172,7 @@ body {
 }
 
 body#bg-img {
-  background-image: url("/img/background.jpg");
+  background-image: url("../img/background.jpg");
   background-attachment: fixed;
   background-size: cover;
 }
