--- a/css/main.css
+++ b/css/main.css
@@ -429,6 +429,7 @@ main#home h1 {
   }
   .menu-branding .portrait {
     background: url("../img/portrait.jpg");
+    background-size: cover;
     width: 150px;
     height: 150px;
   }
