--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@
 .menu-branding .portrait {
   width: 250px;
   height: 250px;
-  background: url("../img/portrait.jpg");
+  background: url("../img/profil.jpg");
   background-size: cover;
   border-radius: 50%;
   border: 3px solid #eece1a;
@@ -429,7 +429,7 @@ main#home h1 {
             transform: translate3d(100%, 0, 0);
   }
   .menu-branding .portrait {
-    background: url("../img/portrait.jpg");
+    background: url("../img/profil.jpg");
     background-size: cover;
     width: 150px;
     height: 150px;
